Update: Updated views
-Added missing buttons for exporting to xml
-Major fromatinfg fixes

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -57,7 +57,11 @@
                     <p th:text="${error}"></p>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-info">Login</button>
+                    <a class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" th:href="@{/register.html}">Nie masz konta? - Zarejestruj sie</a>
+                </div>
+                <div class="d-flex justify-content-center">
+
+                    <button type="submit" class="btn btn-info my-2">Login</button>
                 </div>
             </form>
         </div>
