--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,6 +29,7 @@
     <div class="container my-3">
 
         <div>
+            <div class="d-flex justify-content-center">
             <div th:if="${successMessage}" class="success-message">
                 <div class="card text-white bg-success mb-3 border-dark" style="max-width: 18rem;">
                     <div class="card-body">
@@ -36,13 +37,16 @@
                     </div>
                 </div>
             </div>
+            </div>
 
+            <div class="d-flex justify-content-center">
             <div th:if="${errorMessage}" class="error-message">
-                <div class="card text-white bg-warning mb-3 border-dark" style="max-width: 18rem;">
+                <div class="card text-white bg-danger mb-3 border-dark" style="max-width: 18rem;">
                     <div class="card-body"
                         <p th:text="${errorMessage}"></p>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
 
@@ -164,7 +168,7 @@
                             </div>
                             <div class="card-footer d-flex justify-content-center">
                                 <div>
-                                    <a th:href="@{/contact.html}"
+                                    <a th:href="@{/contact}"
                                     ><button type="button" class="btn btn-info border-white">
                                         Kontakt
                                     </button></a
