--- a/src/main/resources/templates/show_all_ships.html
+++ b/src/main/resources/templates/show_all_ships.html
@@ -47,14 +47,6 @@
         <div class="d-flex justify-content-center">
           <h1 class="m-3 text-info">Lista przypłynięć statków</h1>
         </div>
-          <div>
-              <div th:if="${successMessage}" class="success-message">
-                  <p th:text="${successMessage}"></p>
-              </div>
-              <div th:if="${errorMessage}" class="error-message">
-                  <p th:text="${errorMessage}"></p>
-              </div>
-          </div>
       <table class="table table-dark table-striped table-bordered border-info border-3 rounded table-hover">
         <thead>
         <tr>
@@ -85,7 +77,8 @@
               <a th:href="@{'/showArrivalShips/' + ${ship.id}}" class="btn btn-info">Szczegóły</a>
             </div>
             <div th:if="${session['user_id'] != null}" class="btn-group m-2">
-              <a th:href="@{'/exportJsonOneShip/' + ${ship.id}}" class="btn btn-info">Eksportuj do JSON</a>
+              <a th:href="@{'/exportJsonOneShip/' + ${ship.id}}" class="btn btn-info">JSON</a>
+              <a th:href="@{'/exportXmlOneShip/' + ${ship.id}}" class="btn btn-info">XML</a>
             </div>
             <div class="btn-group m-2">
               <a th:href="@{'/portDetails/' + ${ship.initialPortCode}}" class="btn btn-info">Port macierzysty</a>
@@ -102,6 +95,12 @@
         <a th:href="@{/exportXmlAllShip}">
           <button class="btn btn-info m-3">Eksportuj listę do pliku XML</button>
         </a>
+      </div>
+        <div class="button" th:if="${session['username'] != null}">
+        <a class="button" th:href="@{/exportJsonAllShips}">
+          <button class="btn btn-info m-3">Eksportuj listę do pliku JSON</button>
+        </a>
+      </div>
       </div>
     </div>
 
