Fix: Fixed link on login and register page
Fixed rerouting on login and register links in login.html and register.html

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -57,7 +57,7 @@
                     <p th:text="${error}"></p>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <a class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" th:href="@{/register.html}">Nie masz konta? - Zarejestruj sie</a>
+                    <a class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" th:href="@{/register}">Nie masz konta? - Zarejestruj sie</a>
                 </div>
                 <div class="d-flex justify-content-center">
 
