--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <a class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" th:href="@{/register.html}">Masz już konto? - Zaloguj sie</a>
+                        <a class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" th:href="@{/login}">Masz już konto? - Zaloguj sie</a>
                     </div>
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-info mx-1 my-2">Zarejestruj</button>
